--- a/src/main/python/mainwindow.ui
+++ b/src/main/python/mainwindow.ui
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>ColX</string>
   </property>
   <property name="styleSheet">
    <string notr="true"/>
